# grant_hrcs_tagger

./: .gitignore  Makefile  README.md  environment.yml  environment_mac.yml  pyproject.toml  requirements.txt
config/: deploy_config.yaml  train_config.yaml
data/criteria/: criteria.csv
data/label_names/: label_mapping_long.json  label_mapping_short.json  label_mapping_tiny.json  ukhra_ra.jsonl
notebooks/: balanced_sampling.ipynb  eda.ipynb  synthetic_grants.ipynb  tag_overview.ipynb
src/: data_processing.py  deploy.py  download_urls.txt  inference.py  metrics.py  preprocess.py  stage_model.py  synthetic_grants.py  train.py  train_test_split.py  utils.py
src/binary_matching/: embedding_model.py  embedding_pipeline.py
src/binary_matching/models/: cnn_1d.py  convert_to_bm.py  data.py  embedding_model.py  metrics.py  model.py  train.py
src/binary_matching/models/other/: embedding_model.py  nearest_neighbourghs.py  svm.py
src/data_processing/: __init__.py  config.json  data_processing.py  nihr_data.py  ukhra_data.py
src/data_processing/config/: config.json
src/data_processing/dedupper/: _data_structures.py  lsh.py
src/data_processing/transforms/: hc_mapping.json
test/: synthetic_data.json  test_data_processing.py
