[project]
name = "grant-hrcs-tagger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "akin==1.0.1",
    "click>=8.1.8",
    "datasketch>=1.6.5",
    "jupyterlab>=4.3.5",
    "mmh3>=5.1.0",
    "numpy==1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "protobuf==3.20",
    "pyarrow>=19.0.1",
    "python-dotenv>=1.1.0",
    "rich>=13.9.4",
    "sagemaker==2.244.2",
    "scikit-learn>=1.6.1",
    "scikit-multilearn>=0.2.0",
    "torch>=2.6.0",
    "transformers[torch]>=4.49.0",
    "wandb>=0.19.7",
]
