[project]
name = "grant-hrcs-tagger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "akin==1.0.1",
    "click>=8.1.8",
    "datasketch>=1.6.5",
    "jupyterlab>=4.3.5",
    "mmh3>=5.1.0",
    "numpy==1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.3.0",
    "protobuf==5.29.6",
    "pyarrow>=19.0.1",
    "python-dotenv>=1.1.0",
    "rich>=13.9.4",
    "ruff>=0.11.12",
    "sagemaker==3.8.0",
    "scikit-learn>=1.6.1",
    "scikit-multilearn>=0.2.0",
    "setuptools>=81.0.0",
    "torch==2.6.0",
    "transformers[torch]>=4.49.0",
    "wandb>=0.19.7",
    "flash-attn==2.7.4.post1; sys_platform == 'linux'",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pydocstyle
    "D",
]
ignore = ["D100", "D104", "E501"]

[tool.uv.extra-build-dependencies]
flash-attn = [
    { requirement = "torch", match-runtime = true },
    "setuptools>=81",
    "wheel",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
]
